--- a/teiknsett.html
+++ b/teiknsett.html
@@ -146,7 +146,7 @@
                 </article>
                 
                 <article style="grid-column: 2; grid-row: 1;">
-                <h2 style="text-align: center"><img style="max-height: 400px; padding-top: 80px"  src="images/wiki.png" ></h2>
+                <h2 style="text-align: left"><img style="max-height: 400px; padding-top: 80px"  src="images/wiki.png" ></h2>
                 <br>
                 
                 </article>
